force-app/main/default/objects/Case_Comment_Template__c/Case_Comment_Template__c.object-meta.xml
<CustomObject>
    <label>Case Comment Template</label>
    <nameField>
        <label>Case Comment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comment Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>