force-app/main/default/objects/Case_Comment_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When check box is unchecked Comment Template will not appear as option to the user to select.</description>
    <inlineHelpText>When check box is unchecked Comment Template will not appear as option to the user to select.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>