force-app/main/default/objects/Case_Comment_Template__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificates</fullName>
            </value>
            <value>
                <fullName>Course Records</fullName>
            </value>
            <value>
                <fullName>Escalations</fullName>
            </value>
            <value>
                <fullName>Handover Procedures</fullName>
            </value>
            <value>
                <fullName>Instructors</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Offerings</fullName>
            </value>
            <value>
                <fullName>Organizations</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Programs</fullName>
            </value>
            <value>
                <fullName>Purchase Orders</fullName>
            </value>
            <value>
                <fullName>RBC</fullName>
            </value>
            <value>
                <fullName>Red Cross Store</fullName>
            </value>
            <value>
                <fullName>TSC Support</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>