force-app/main/default/objects/Case_Comment_Template__c/fields/Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>Comment_Body__c</fullName>
    <label>Comment Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>